--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@ v<!DOCTYPE html>
 
         </div>
         <div id="personal">
-            <h1>Jose Manuel</h1>
-            <img src="img/foto_de_gatito.webp" alt="EDR">
-            <p>Hola soy alumno del curso Diseño Web</p>
+            <h1>Edgar David</h1>
+            <img src="img/foto edr.jpg" alt="EDR">
+            <p>Hola soy docente del curso Diseño Web</p>
         </div>
         <hr>
         <div id="tareas">
