--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@ v<!DOCTYPE html>
                 <li><a href="/exp/index.html">Examen Parcial</a></li>
                 <li><a href="/tarea09/index.html">Tarea 09</a></li>
                 <li><a href="/tarea10/index.html">Tarea 10</a></li>
-                <li><a href="#">Tarea 11</a></li>
-                <li><a href="#">Tarea 12</a></li>
-                <li><a href="#">Tarea 13</a></li>
-                <li><a href="#">Tarea 14</a></li> 
-                <li><a href="#">Examen Final</a></li>
+                <li><a href="/tarea11/index.html">Tarea 11</a></li>
+                <li><a href="/tarea12/index.html">Tarea 12</a></li>
+                <li><a href="/tarea13/index.html">Tarea 13</a></li>
+                <li><a href="/tarea14index.html">Tarea 14</a></li> 
+                <li><a href="/examenfinal/index.html">Examen Final</a></li>
            
             </ul>
         </div>
