--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@ v<!DOCTYPE html>
 
         </div>
         <div id="personal">
-            <h1>Edgar David</h1>
+            <h1>Jose Manuel</h1>
             <img src="img/foto edr.jpg" alt="EDR">
-            <p>Hola soy docente del curso Diseño Web</p>
+            <p>Hola soy alumno del curso Diseño Web</p>
         </div>
         <hr>
         <div id="tareas">
@@ -33,6 +33,7 @@ v<!DOCTYPE html>
                 <li><a href="/tarea11/index.html">Tarea 11</a></li>
                 <li><a href="/tarea12/index.html">Tarea 12</a></li>
                 <li><a href="/evp4/index.html">EvP04</a></li>
+                <li><a href="/tarea13/index.html">Tarea 13</a></li>
                 <li><a href="/tarea14index.html">Tarea 14</a></li> 
                 <li><a href="/examenfinal/index.html">Examen Final</a></li>
            
